# cwrappers

./: .gitignore  LICENSE  README.md  __init__.py  cli.py  pyproject.toml  setup.py
cwrappers/: __main__.py  cli.py
cwrappers/data/: categories.txt  categorized_methods.yaml
cwrappers/finder/: ast_utils.py  callgraph.py  catalog.py  clang_bootstrap.py  cli.py  compile_commands.py  models.py  output.py  provenance.py  runner.py  wrapper_detection.py
cwrappers/fuzzy/: canon.py  cli.py  io.py  normalize.py  scoring.py
cwrappers/shared/: paths.py
data/: categorized_methods.yaml
finder/: __init__.py  __main__.py  analysis.py  callgraph.py  clang_bootstrap.py  cli.py  output.py  runner.py
fuzzy/: __init__.py  __main__.py  canon.py  cli.py  io.py
shared/: __init__.py  log.py
tests/: test_ast_utils.py  test_callable_kinds.py  test_callgraph_export.py  test_compile_commands.py  test_edge_evidence.py  test_runner_callees.py
